tests/language_modules/09_statements/valid/let_statement.vf
module LetStatement

procedure main()
is
    let amount: Integer = 1
    check amount = 1
end main

end LetStatement