tests/language_modules/09_statements/invalid_semantics/unknown_assignment_target.vf
module UnknownAssignmentTarget

procedure main()
is
    amount := 1
end main

end UnknownAssignmentTarget